# ros2_ws

./: README.md  package.xml
install/: local_setup.sh  setup.sh
install/detect/share/detect/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/detect/share/detect/launch/: detect.launch.py
launch/: detect.launch.py
src/: CMakeLists.txt  detect_node.cpp
